--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     - name: npm install and build webpack
       run: |
         npm install
-        npm run buiild
+        npm run build
   
   test:
     runs-on: ubuntu-latest
