--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     strategy:
-    needs: build
+      matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
     steps:
